Html Lint added

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "emmet": "*",
     "js-beautify" : "*",
     "less" : "*",
+    "htmlhint" : "*",
     "jshint" : "*",
     "csslint" : "*",
     "jsonlint" : "*",
